# Wem

./: .gitignore  Cargo.toml  server.err
.claude/: settings.json  settings.local.json
Note/: agent-architecture-walkthrough.md  agent-architecture.md  architecture-refactor.md  claude-code-analysis.md  layout-system-design-report-2026-04-26.md  openclaw-analysis.md
src/: main.rs
src/api/: mod.rs  query.rs  request.rs  response.rs
src/db/: mod.rs  repository.rs  schema.rs
src/handler/: block.rs  mod.rs
src/model/: block.rs  mod.rs
src/parser/: _temp_new.md  markdown.rs  mod.rs  types.rs
src/service/: block.rs  export.rs  fractional.rs  import.rs  mod.rs
wem-data/: wem.db-shm  wem.db-wal
wem-kernel/: .gitignore  Cargo.toml  debug_db.py  debug_db2.py  wem.toml
wem-kernel/src/: agent.rs  api.rs  block_system.rs  config.rs  error.rs  lib.rs  main.rs  repo.rs  server.rs
wem-kernel/src/agent/: context.rs  handler.rs  loop_runner.rs  mcp.rs  permission.rs  prompt.rs  provider.rs  runtime.rs  session.rs  tools.rs
wem-kernel/src/agent/provider/: anthropic.rs  anthropic_compatible.rs  openai_compatible.rs
wem-kernel/src/agent/tools/: file_ops.rs  shell_ops.rs
wem-kernel/src/api/: query.rs  request.rs  response.rs
wem-kernel/src/block_system/: handler.rs  mod.rs  model.rs  parser.rs  service.rs
wem-kernel/src/block_system/handler/: asset.rs  block.rs  document.rs  event.rs  mod.rs  oplog.rs
wem-kernel/src/block_system/model/: block.rs  event.rs  mod.rs  oplog.rs
wem-kernel/src/block_system/parser/: markdown.rs  types.rs
wem-kernel/src/block_system/service/: asset.rs  batch.rs  block.rs  document.rs  event.rs  heading.rs  helpers.rs  list.rs  mod.rs  oplog.rs  paragraph.rs  position.rs  traits.rs
wem-kernel/src/cli/: app.rs  mod.rs
wem-kernel/src/cli/ui/: chat.rs  input.rs  markdown.rs  mod.rs  status_bar.rs
wem-kernel/src/db/: block_repo.rs  mod.rs  oplog_repo.rs  schema.rs
wem-kernel/src/dto/: mod.rs  request.rs  response.rs
wem-kernel/src/handler/: block.rs  document.rs  event.rs  mod.rs  oplog.rs
wem-kernel/src/model/: block.rs  event.rs  mod.rs  oplog.rs
wem-kernel/src/parser/: markdown.rs  mod.rs  types.rs
wem-kernel/src/repo/: block_repo.rs  init.rs  mod.rs  oplog_repo.rs  schema.rs  session_repo.rs
wem-kernel/src/service/: block.rs  content.rs  document.rs  event.rs  export.rs  import.rs  mod.rs  oplog.rs  position.rs
wem-kernel/src/service/block_system/: block.rs  document.rs  event.rs  heading.rs  mod.rs  oplog.rs  paragraph.rs  position.rs
wem-kernel/src/util/: fractional.rs  mod.rs
wem-web/: .env  index.html  package-lock.json  package.json  vite.config.ts
wem-web/src/: App.tsx  index.css  theme.tsx  tokens.css
wem-web/src/api/: agent.ts  client.ts
wem-web/src/components/editor/: WemEditor.tsx  editor.css  index.ts
wem-web/src/components/editor/blocks/: AudioBlock.tsx  BlockquoteBlock.tsx  CodeBlock.tsx  EmbedBlock.tsx  HeadingBlock.tsx  ImageBlock.tsx  ListItemBlock.tsx  MathBlock.tsx  ParagraphBlock.tsx  TableBlock.tsx  ThematicBreakBlock.tsx  UnknownBlock.tsx  VideoBlock.tsx
wem-web/src/components/editor/blocks/codeblock/: cm6-languages.ts  cm6-theme.ts
wem-web/src/components/editor/components/: BlockContainer.tsx  BlockContextMenu.tsx  BlockTreeRenderer.tsx  EmojiPicker.tsx  InlineToolbar.tsx  MathEditPopup.tsx  SlashCommandMenu.tsx
wem-web/src/components/editor/core/: BlockOperations.ts  Commands.ts  EditorErrorBoundary.tsx  EditorSelection.ts  EditorSettings.tsx  HeadingNumbering.tsx  InlineParser.ts  OperationQueue.ts  SelectionManager.ts  SlashMenuContext.tsx  UndoManager.ts  types.ts  useBlockDrag.ts  useSelectionManager.ts  useTextBlock.ts
wem-web/src/components/layout/: ActivityBar.tsx  Breadcrumb.tsx  CopilotPanel.tsx  PanelContainer.tsx  Sidebar.tsx  SlotContainer.tsx  TabBar.tsx  TocPanel.tsx  index.ts  panelRegistry.tsx
wem-web/src/hooks/: useCopilotSession.ts  useDocumentSSE.ts
wem-web/src/lib/: utils.ts
wem-web/src/pages/: EditorPage.tsx
wem-web/src/stores/: layoutStore.tsx  tabStore.tsx
wem-web/src/types/: api.ts
