[package]
name = "wem-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web框架，处理 HTTP 请求/路由
axum = "0.8"

# 异步运行时，Axum 的底层引擎
tokio = { version = "1", features = ["full"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled"] }

# 时间处理
chrono = "0.4"

# 随机数
rand = "0.8"

# HTTP 中间件
tower-http = { version = "0.6", features = ["cors"] }

# 错误类型定义简写（AppError）
thiserror = "2"