[package]
name = "wem-kernel"
version = "0.1.0"
edition = "2024"
default-run = "wem-kernel"

[[bin]]
name = "wem-cli"
path = "src/bin/wem_cli.rs"

[dependencies]
# Web框架，处理 HTTP 请求/路由
axum = "0.8"

# 异步运行时，Axum 的底层引擎
tokio = { version = "1", features = ["full"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled"] }

# 时间处理
chrono = "0.4"

# 随机数
rand = "0.8"

# HTTP 中间件
tower-http = { version = "0.6", features = ["cors"] }

# 错误类型定义简写（AppError）
thiserror = "2"

# TOML 配置文件解析
toml = "0.8"

# Markdown 解析：已替换为自研递归下降解析器

# 异步 Stream 适配（SSE 事件流）
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# 日志（EventBus 调试用）
tracing = "0.1"