[package]
name = "wem-kernel"
version = "0.1.0"
edition = "2024"
default-run = "wem-kernel"

[[bin]]
name = "wem-cli"
path = "src/bin/wem_cli.rs"

[[bin]]
name = "wem-agent"
path = "src/bin/wem_agent.rs"

[dependencies]
# Web框架，处理 HTTP 请求/路由
axum = "0.8"

# 异步运行时，Axum 的底层引擎
tokio = { version = "1", features = ["full"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled"] }

# 时间处理
chrono = "0.4"

# 随机数
rand = "0.8"

# HTTP 中间件
tower-http = { version = "0.6", features = ["cors"] }

# 错误类型定义简写（AppError）
thiserror = "2"

# TOML 配置文件解析
toml = "0.8"

# Markdown 解析：已替换为自研递归下降解析器

# 异步 Stream 适配（SSE 事件流）
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# 日志（EventBus 调试用）
tracing = "0.1"

# ─── Agent 子系统依赖 ──────────────────────────────────────

# HTTP 客户端（Anthropic Provider）
reqwest = { version = "0.12", features = ["stream", "json"] }

# SSE 流解析（Anthropic 流式响应）
eventsource-stream = "0.2"

# async trait 支持
async-trait = "0.1"

# OpenAI 兼容 API 客户端
async-openai = { version = "0.35", default-features = false, features = ["chat-completion"] }

# 并发安全 HashMap（Session Manager）
dashmap = "6"

# tokio 工具（CancellationToken）
tokio-util = "0.7"

# JSON Schema 自动生成（Tool 参数定义）
schemars = "0.8"

# UUID 生成（Session ID）
uuid = { version = "1", features = ["v4"] }

# MCP 协议客户端（Model Context Protocol）
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }